# blazon

./: .gitignore  NOTES.md  README.md  pyproject.toml  setup.py
blazon/: __init__.py  base.py  environment.py  helpers.py  json_schema.py  native.py  schema.py  schematic.py
blazon/constraints/: __init__.py  base.py  conditionals.py  containers.py  formats.py  maps.py  numbers.py  strings.py
blazon/environments/: __init__.py  json_schema.py
tests/: speed.py  test_base.py  test_conditionals.py  test_containers.py  test_doc_snippets.py  test_formats.py  test_json_schema.py  test_maps.py  test_native.py  test_numbers.py  test_schematic.py  test_strings.py  test_swagger.py
tests/data/: users.json
tests/schemas/: Monster.yaml  Person.yaml  swagger.yaml
