[tool.poetry]
name = "blazon"
version = "0.1.0"
description = ""
authors = ["Brantley Harris <deadwisdom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
inflection = "^0.3.1"
networkx = "^2.3"
rfc3987 = {version = "^1.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rfc3987 = "^1.3"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
