[tool.poetry]
name = "blazon"
version = "0.1.0"
description = ""
authors = ["Brantley Harris <deadwisdom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
inflection = "^0.3.1"
networkx = "^2.3"
rfc3987 = {version = "^1.3", optional = true}
pytest-benchmark = "^3.2.3"
shortuuid = "^1.0.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rfc3987 = "^1.3"
pytest-cov = "^2.7"
fastjsonschema = "^2.14.4"
black = "^19.10b0"
jsonschema = "^3.2.0"

[tool.black]
line-length = 100[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

